# pipewise

./: .gitignore  CHANGELOG.md  LICENSE  PIPEWISE_ANALYSIS.md  README.md  example.py  pyproject.toml  requirements.txt  test.ipynb  test.py
.github/workflows/: publish.yml  test.yml
pipewise/: __init__.py  _schema.py  core.py  errors.py
tests/: test_pipewise.py
