[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipewise"
version = "1.0.1"
description = "A lightweight pandas DataFrame pipeline with schema validation and rollback support."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "XiaoZhouZhou" }
]
dependencies = [
  "pandas>=1.5.0",
  "tqdm>=4.65.0"
]
keywords = ["pandas", "dataframe", "pipeline", "etl", "schema-validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pipewise*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

